@startuml
skinparam defaultFontSize 11
skinparam classAttributeIconSize 0
skinparam linetype ortho

title Clinical Portal - Application Services (CQRS + MediatR)

package "Queries" <<Rectangle>> {

    class GetPatientListQuery <<Query>> {
        + ClinicianId : Guid
        + SearchTerm : string?
        + PageNumber : int
        + PageSize : int
    }

    class GetReferralInboxQuery <<Query>> {
        + ClinicianId : Guid
        + Status : ReferralStatus?
        + SortBy : string
    }

    class GetTreatmentReviewQueueQuery <<Query>> {
        + ClinicianId : Guid
        + Status : TreatmentReviewStatus?
        + ReviewType : TreatmentReviewType?
    }

    class GetPatientTimelineQuery <<Query>> {
        + PatientId : Guid
        + ClinicianId : Guid
    }
}

package "Commands" <<Rectangle>> {

    class AcceptReferralCommand <<Command>> {
        + ReferralId : Guid
        + ClinicianId : Guid
    }

    class ApproveTreatmentPlanCommand <<Command>> {
        + ReviewId : Guid
        + ClinicianId : Guid
        + Rationale : string
    }

    class RejectTreatmentPlanCommand <<Command>> {
        + ReviewId : Guid
        + ClinicianId : Guid
        + Reason : string
    }

    class ApproveTreatmentAdjustmentCommand <<Command>> {
        + ReviewId : Guid
        + ClinicianId : Guid
        + Rationale : string
    }

    class RejectTreatmentAdjustmentCommand <<Command>> {
        + ReviewId : Guid
        + ClinicianId : Guid
        + Reason : string
    }

    class DeclineReferralCommand <<Command>> {
        + ReferralId : Guid
        + ClinicianId : Guid
        + DeclineReason : string
    }

    class AddClinicalNoteCommand <<Command>> {
        + PatientId : Guid
        + AuthorId : Guid
        + Content : string
        + NoteType : ClinicalNoteType
    }
}

package "Handlers" <<Rectangle>> {

    class GetPatientListHandler <<Handler>> {
        - _readDb : IReadDbContext
        - _cache : IDistributedCache
        --
        + Handle(query) : PagedResult<PatientSummaryDto>
    }

    class GetReferralInboxHandler <<Handler>> {
        - _readDb : IReadDbContext
        --
        + Handle(query) : List<ReferralDto>
    }

    class GetTreatmentReviewQueueHandler <<Handler>> {
        - _readDb : IReadDbContext
        --
        + Handle(query) : List<TreatmentReviewDto>
    }

    class TreatmentReviewHandler <<Handler>> {
        - _reviewRepository : ITreatmentReviewRepository
        - _outbox : IIntegrationOutbox
        --
        + Handle(command) : Result
    }

    class ReferralHandler <<Handler>> {
        - _repository : IReferralCaseRepository
        - _outbox : IIntegrationOutbox
        --
        + Handle(command) : Result
    }

    class AddClinicalNoteHandler <<Handler>> {
        - _repository : IClinicalNoteRepository
        - _outbox : IIntegrationOutbox
        --
        + Handle(command) : Result
    }
}

GetPatientListQuery --> GetPatientListHandler
GetReferralInboxQuery --> GetReferralInboxHandler
GetTreatmentReviewQueueQuery --> GetTreatmentReviewQueueHandler
ApproveTreatmentPlanCommand --> TreatmentReviewHandler
RejectTreatmentPlanCommand --> TreatmentReviewHandler
ApproveTreatmentAdjustmentCommand --> TreatmentReviewHandler
RejectTreatmentAdjustmentCommand --> TreatmentReviewHandler
AcceptReferralCommand --> ReferralHandler
DeclineReferralCommand --> ReferralHandler
AddClinicalNoteCommand --> AddClinicalNoteHandler

@enduml
